# news

./: .dockerignore  .gitignore  docker-compose.yml  erl_crash.dump  skybeam_recent.txt
config/deploy/: kamal.yml
config/env/: dev.env  example.env
docker/feedbrainer/: Dockerfile
docker/initdb/: 0001_enable_pgvector.sql
docker/redis/: redis.conf
docker/skybeam/: Dockerfile
docker/skytorch/: Dockerfile
docker/skywire/: Dockerfile
docs/: build-skybeam-on-server.md  chunking_embeddings_best_practices.md  deployment.md  dev_containers.md  env.md  firehose_debugging_guide.md  health_checks.md  troubleshooting.md
feedbrainer/: .gitignore  Gemfile  Procfile  backfill_avatars.rb
feedbrainer/config/: application.rb  cable.yml  credentials.yml.enc  database.yml  deploy.yml  master.key  puma.rb  routes.rb
feedbrainer/db/: schema.rb
feedbrainer/script/: analyze_fetch_failures.rb  check_link_capture.rb  firehose_consumer.rb  test_cache.rb  test_cache_invalidation.rb  test_link_detection.rb
feedbrainer/spec/: rails_helper.rb  spec_helper.rb
scripts/: build-and-push-images.sh  build-skybeam-on-server-remote.sh  build-skybeam-on-server.sh  build-skybeam-remote.sh
skybeam/: .gitignore  README.md  mix.exs
skybeam/assets/: tailwind.config.js
skybeam/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
skytorch/: .gitignore  README.md  pyproject.toml
skytorch/skytorch/: __init__.py  atproto_client.py  config.py  main.py  nlp.py
skytorch/skytorch/routers/: api.py  health.py
skywire/: .gitignore  README.md  package-lock.json  package.json
(+1799 files in other folders)
