[tool.poetry]
name = "skytorch"
version = "0.1.0"
description = "FastAPI application for Skytorch"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
psycopg2-binary = "^2.9.10"
redis = "^5.2.0"
httpx = "^0.27.0"
spacy = "^3.7.0"
sentence-transformers = "^2.7.0"
atproto = "^0.0.60"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
black = "^24.8.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

